# gpt-scientist-scholar

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gpt_scientist/: __init__.py  gpt_scientist.py
