[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_scientist_scholar"
version = "0.0.1"
description = "A lightweight library for retrieving academic paper data for further processing with gpt-scientist."
readme = "README.rst"
authors = [
  {name = "Elena Glassman", email = "elena.glassman@gmail.com"}
]
classifiers = []
license = {text = "MIT license"}
dependencies = [
    "pandas",
    "python-dotenv",
    "openai >= 1.45.0",
    "tiktoken",
    "fuzzysearch",
    "tenacity",
    "pydantic",
    "requests",
]

[project.urls]

homepage = "https://github.com/eglassman/gpt-scientist-scholar"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gpt_scientist_scholar"]

[tool.setuptools.package-data]
gpt_scientist = ["model_pricing.json"]
